--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -5375,7 +5375,7 @@ body.scroll_fixed {
   }
 
   .citizenship {
-    margin: 0 auto 74px;
+    margin: 20px 15px 74px;;
   }
 
   .citizenship__title {
@@ -6009,7 +6009,7 @@ body.scroll_fixed {
   }
 
   .citizenship {
-    margin: 0 auto 54px;
+    margin: 20px 15px 10px;
   }
 
   .citizenship__subtitle {
