--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -10017,6 +10017,9 @@ body.scroll_fixed {
 }
 
 @media (max-width: 539px) {
+  .citizenship {
+    border-radius: 5px;
+  }
   .vnj__form-btn {
     padding: 10px 12px;
     font-size: 13px;
